Resolve overflow

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -108,6 +108,7 @@ ol,
   text-align: center;
   justify-content: center;
   align-items: center;
+  height: 40rem;
 }
 .grid-head {
   font-weight: 600;
@@ -127,20 +128,20 @@ ol,
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 298px;
+  height: 20rem;
 }
 .solardd {
-  height: 298px;
+  height: 20rem;
   background-color: #e1edcf;
 }
 .invertersys {
-  height: 277px;
+  height: 20rem;
   background-color: #f4f8ed;
   display: flex;
   padding: 0px 58px;
 }
 .shop-all {
-  height: 277px;
+  height: 20rem;
   background-color: #cbdfab;
   a.btn {
     color: #cbdfab;
